wp-content/themes/wp-starter/assets/css/blocks/navigation.css
/* MAIN NAVIGATION HEADER */

.main-menu a,
.main-navigation a {
  @apply no-underline;
}

.main-header::before {
  @apply content-[''] block absolute -z-10 w-full h-full top-0 backdrop-blur-lg;
  background: rgb(0, 0, 0);
  background: linear-gradient(
    180deg,
    rgba(0, 0, 0, 0.8) 00%,
    rgba(252, 70, 107, 0) 100%
  );
}

.menu-main-navigation-container {
  @apply grow;
}

@media (min-width: 1024px) {
  .menu-main-navigation-container {
    @apply pl-10 flex justify-between items-center;
  }
}

.main-menu {
  @apply relative;
}

@media (min-width: 1024px) {
  .main-menu {
    @apply flex px-6 py-3 rounded-xl space-y-0 items-center pr-0;
  }
  /* .main-menu::before {
    @apply content-[''] block absolute -z-10 left-0 right-0 bottom-0 top-0 backdrop-blur-md rounded-xl;
  } */
}

.menu-item {
  @apply relative border-b border-nav-border pb-8;
}
@media (min-width: 1024px) {
  .menu-item {
    @apply border-0 pb-0;
  }
}
.menu-item > div {
  @apply transition-all text-xl font-bold leading-none text-white pb-0 pl-4;
}

@media (min-width: 1024px) {
  .menu-item > div {
    @apply pl-0;
  }
}

.menu-item:last-child {
  @apply border-0;
}

@media (min-width: 1024px) {
  .menu-item a {
    @apply text-base py-3 px-5 rounded-md text-[14px] no-underline;
  }
}

.menu-item.current-menu-item > div > a,
.sub-menu .menu-item.current-menu-item > a {
  @apply opacity-50 no-underline;
}

@media (min-width: 1024px) {
  .menu-item.current-menu-item > div > a,
  .sub-menu .menu-item.current-menu-item > a {
    @apply opacity-100 bg-white/10 no-underline;
  }
}

@media (min-width: 1024px) {
  .menu-item:hover > div > a {
    @apply bg-white/10 opacity-100;
  }
}

.sub-menu {
  @apply max-h-0 overflow-hidden	transition-all duration-500 relative;
}

@media (min-width: 1024px) {
  .sub-menu {
    @apply overflow-hidden max-h-0 absolute left-0 top-full mt-2 py-2 transition-all duration-300 whitespace-nowrap;
  }
  .sub-menu::after {
    @apply content-[''] block absolute inset-0 -z-10 rounded-xl backdrop-blur-md bg-black/60;
  }
}

@supports (-webkit-backdrop-filter: blur(10px)) {
  .sub-menu::before {
    @apply bg-white/80;
  }
}

.sub-menu-open {
  @apply max-h-[500px];
}
.sub-menu .menu-item {
  @apply border-0 pt-2.5 pb-0 pl-8;
}

@media (min-width: 1024px) {
  .sub-menu .menu-item {
    @apply p-0 mb-0;
  }
}
@media (min-width: 1024px) {
  .js-subnav-trigger:hover {
    @apply opacity-80;
  }
}

.sub-menu .menu-item a {
  @apply text-lg pb-0 inline-block no-underline;
}

@media (min-width: 1024px) {
  .sub-menu .menu-item a {
    @apply text-base text-[14px] p-0 bg-transparent px-5 py-1.5 w-full no-underline;
  }
  .sub-menu .menu-item a:hover,
  .sub-menu .current-menu-item a {
    @apply text-white/50;
  }
}

@media (min-width: 1024px) {
  .sub-menu .menu-item:first-child a {
    @apply pt-2;
  }
  .sub-menu .menu-item:last-child a {
    @apply pb-2;
  }
}

.menu-item-has-children a {
  @apply relative no-underline;
}

@media (min-width: 1024px) {
  .menu-item-has-children:hover svg {
    @apply rotate-90;
  }
}

.is-active svg {
  @apply rotate-90;
}

@media (min-width: 1024px) {
  .menu-item-has-children:hover > .sub-menu {
    @apply max-h-[999px];
  }
}

/* LANG SWITCHER */
.nav-open {
  @apply pointer-events-auto opacity-100;
}

.lang-toggle-active svg {
  @apply rotate-180;
}

.menu-btn-gray,
.menu-btn-black,
.menu-btn-white {
  @apply border-0 pb-0 ml-4;
}

.menu-btn-gray a {
  @apply rounded-full inline-block bg-[#1B1A1F] border border-[#999999]  !py-2 px-5 whitespace-nowrap no-underline;
}

.menu-btn-black a {
  @apply rounded-full inline-block bg-black border   py-2 px-5 border-white whitespace-nowrap !py-2 no-underline;
}

.menu-btn-white a {
  @apply rounded-full inline-block bg-white text-black border border-white py-2 px-5 whitespace-nowrap !py-2 font-semibold no-underline transition-all;
}

.menu-btn-white a:hover {
  @apply bg-white/80 border-white/80;
}

@media (min-width: 1024px) {
  .menu-btn-white:hover > div > a,
  .menu-btn-white:hover a {
    @apply bg-white/80 !important;
  }
}
@media (min-width: 1024px) {
  .menu-btn-gray a,
  .menu-btn-black a {
    @apply text-[15px];
  }
}

